# python-quiz-app

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  app.py  docker-compose.yml  exam_questions.json  pyproject.toml  questions.json  requirements.txt  start.bat  start.py  start.sh  wsgi.py
static/: script.js  style.css
templates/: index.html
tests/: test_app.py
